# wav2lip

./: .gitignore  inference.py  pyproject.toml
.devcontainer/: devcontainer.json
docker/: conda_env.yml  dockerfile  entry_script.sh  post_script.sh  requirements.pip.txt  zshrc
